2002-12-01  Ethan Merritt  <merritt@u.washington.edu>

        * term/cgm.trm: Tweak code so gcc3.2 does not complain about
	ill-defined behavior of a[i]=b[i++].

2002-11-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util3d.c (draw3d_line_unconditional): Removed the GP_INLINE
 	qualifier.  MSVC build would fail otherwise.
	
2002-11-27  Johannes Zellner  <johannes@zellner.org>

	* term/cgm.trm:
	- "plot w filledcurves" didn't use the correct line color
	- replaced a few assertions by "truncations" at term->xmax /
	  term->ymax

2002-11-26  Ethan Merritt  <merritt@u.washington.edu>

        * src/save.c src/set.c src/show.c src/unset.c src/tables.c
 	src/tables.h docs/gnuplot.doc: Change syntax from 'set missing
 	"<string>"' to 'set datafile missing "<string>"'. The old syntax
 	is still accepted.

2002-11-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/be.trm, term/cgm.trm, term/x11.trm: Fix
 	more misprints in documentation.

2002-11-26  Peter Wegener  <pete@shirkhan.ilr.ing.tu-bs.de>

	* src/Makefile.am: Allow overriding X11_DRIVER_DIR from
 	environment.

2002-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/winmain.c (WinMain) [MSC, WIN32]: Use predefined __argc
 	and __argv instead of old hack to generate them from scratch,
 	which couldn't cope with blanks in file names or quoted arguments.

2002-11-15  Ethan Merritt  <merritt@u.washington.edu>

        * src/term.h src/show.c: Accommodate minor inconsistencies in the
	PNG options in various Makefile.{OS} files.

2002-11-13  Ethan Merritt  <merritt@u.washington.edu>

        * configure.in: Tweak the logic to correctly handle a more complete
	set of combinations of old/new libgd old/new PNG driver and 
	--with/--without/--with=dir/ configuration options.

2002-11-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c(xtick_callback): Remove extra } when #ifndef PM3D.

2002-11-05  Shigeharu Takeno  <shige@iee.niit.ac.jp>
